# kn0

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_events.py
src/kn0/: __init__.py  cli.py  config.py  pipeline.py
src/kn0/api/: __init__.py  app.py
src/kn0/api/templates/: upload.html
src/kn0/extraction/: __init__.py  base.py  confidence.py  entity_types.py  resolver.py  spacy_backend.py  type_registry.py
src/kn0/graphrag/: __init__.py  engine.py
src/kn0/ingestion/: __init__.py  base.py  pdf_parser.py  registry.py  text_parser.py
src/kn0/llm/: __init__.py  client.py  extraction_backend.py  prompts.py
src/kn0/persistence/: __init__.py  database.py  models.py  store.py
src/kn0/schemas/: __init__.py  common.py  document.py  entity.py  event.py  relationship.py
tests/: conftest.py
tests/extraction/: test_confidence.py  test_llm_backend.py  test_resolver.py
tests/fixtures/: sample.txt
tests/ingestion/: test_text_parser.py
tests/persistence/: test_event_store.py  test_store.py
tests/schemas/: test_schemas.py
